# sourcing-assistant

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/: 655567965514.json  728482349603.json  856749453424.json  882685490681.json  897869156589.json
frontend/: index.html
src/: logging_config.py  lovbuy_client.py  update_google_sheet.py
