[project]
name = "sourcing-assistant"
version = "0.1.0"
description = "A Python script to download product information from 1688.com via LovBuy API and post it to Google Sheets."
dependencies = [
    "requests>=2.20.0",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=0.7.0",
    "python-dotenv>=0.20.0",
    "Flask>=2.0.0",
    "google-auth>=2.0.0" 
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
run-sourcing = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
backend-path = ["."]
